# NN_API

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  entrypoint.sh  model.py  nginx.conf  pyproject.toml  test.py
.github/workflows/: lint.yml
app/: frontend.py  main.py  ray_serve.py  schemas.py
benchmarks/: locust.py  nginx.py
docs/: main.md
html/NN_API/: index.html
html/NN_API/app/: index.html  main.html
html/NN_API/benchmarks/: index.html  locust.html
html/NN_API/models/: index.html  molecule_solubility.html
html/NN_API/tests/: index.html  single_batch.html
models/: inference.py  molecular_solubility.ipynb  molecule_solubility.ipynb  molecule_solubility.py
tests/: loading.py  matrix_multiply.py  single_batch.py  sol.py
