[project]
name = "nn-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "numpy>=2.2.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "ruff>=0.8.3",
]
